# MeowerBot.py

./: .gitignore  .gitmodules  Pipfile  pyproject.toml
MeowerBot/: Bot.py  __init__.py  __main__.py  _http.py  _websocket.py  _wss.py  command.py  commands.py  context.py  errors.py  types.py
MeowerBot/Cloudlink/: cloudlink.py
MeowerBot/types/: Application.py  Chats.py  Infraction.py  Notification.py  Session.py  User.py  __init__.py  flags.py  messages.py
MeowerBot/util/: bitflag.py
docs/: index.md
tests/: env_shared.py  login.py  test_login.py
